remove corner buttons

--- a/haml/templates/settings.haml
+++ b/haml/templates/settings.haml
@@ -1,6 +1,6 @@
 %ion-view{ title: "TipAdvisorSettings" }
   %ion-content.settings-page{ "ng-controller" => "settingsCtrl", "scroll" => "false" }
-    %button.button-right.button.button-icon.icon.ion-calculator{ "ui-sref" => "calc"}
+    / %button.button-right.button.button-icon.icon.ion-calculator{ "ui-sref" => "calc"}
     .settings-options
       .item.item-toggle.item-text-wrap
         Subtract Sales Tax
