--- a/haml/templates/tipCalc.haml
+++ b/haml/templates/tipCalc.haml
@@ -1,6 +1,6 @@
 %ion-view{ title: "TipCalc" }
   %ion-content{ "ng-controller" => "tipCalcCtrl", "scroll" => "false" }
-    %button.button-right.button.button-icon.icon.ion-ios7-gear-outline{ "ui-sref" => "settings"}
+    / %button.button-right.button.button-icon.icon.ion-ios7-gear-outline{ "ui-sref" => "settings"}
     .calc-container
       .bill-container
         .header Bill
