--- a/www/templates/tipCalc.html
+++ b/www/templates/tipCalc.html
@@ -1,6 +1,6 @@
 <ion-view title='TipCalc'>
   <ion-content ng-controller='tipCalcCtrl' scroll='false'>
-    <button class='button-right button button-icon icon ion-ios7-gear-outline' ui-sref='settings'></button>
+    <!-- %button.button-right.button.button-icon.icon.ion-ios7-gear-outline{ "ui-sref" => "settings"} -->
     <div class='calc-container'>
       <div class='bill-container'>
         <div class='header'>Bill</div>
