--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -38,11 +38,12 @@ body {
   padding: 10px 10px 20px 10px;
   .header{
     color: #FF3A2D;
-    font-size: 1.6em;
+    font-size: 2em;
     padding-bottom: 10px;
   }
   .cur-bill{
-    font-size: 2em;
+    font-size: 2.4em;
+    padding-left: 10px;
   }
 }
 
@@ -50,11 +51,12 @@ body {
   padding: 10px;
   .header{
     color: #FF3A2D;
-    font-size: 1.6em;
+    font-size: 2em;
     padding-bottom: 10px;
   }
   .cur-tip{
-    font-size: 2em;
+    font-size: 2.4em;
+    padding-left: 10px;
   }
 }
 
@@ -67,9 +69,9 @@ body {
       border:2px solid $top-bar-border;
       border-radius: 50%;
       background: $sunset-orange;
-      height: 30px;
+      height: 45px;
       outline:none;
-      width: 30px;
+      width: 45px;
     }
     &::-webkit-slider-thumb:active {
       -webkit-transform: scale(1.2);
@@ -93,11 +95,12 @@ body {
   padding: 10px;
   .header{
     color: #FF3A2D;
-    font-size: 1.6em;
+    font-size: 2em;
     padding-bottom: 10px;
   }
   .cur-total{
-    font-size: 2em;
+    font-size: 2.4em;
+    padding-left: 10px;
   }
 }
 .from-top {
@@ -249,7 +252,6 @@ body {
   }
 }
 .settings-options {
-  margin-top: 50px;
   .item {
     background: black;
     border: none;
