--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,6 +1,6 @@
 <ion-view title='TipAdvisorSettings'>
   <ion-content class='settings-page' ng-controller='settingsCtrl' scroll='false'>
-    <button class='button-right button button-icon icon ion-calculator' ui-sref='calc'></button>
+    <!-- %button.button-right.button.button-icon.icon.ion-calculator{ "ui-sref" => "calc"} -->
     <div class='settings-options'>
       <div class='item item-toggle item-text-wrap'>
         Subtract Sales Tax
