calc visible through ng show

--- a/haml/templates/tipCalc.haml
+++ b/haml/templates/tipCalc.haml
@@ -16,4 +16,4 @@
         .header Total
         .cur-total
           {{ billWithTip | currency }}
-      %div{ "calc" => "" }
+      %div{ "calc" => "", "ng-show" => "calcVisible" }
