--- a/www/templates/tipCalc.html
+++ b/www/templates/tipCalc.html
@@ -23,7 +23,7 @@
           {{ billWithTip | currency }}
         </div>
       </div>
-      <div calc=''></div>
+      <div calc='' ng-show='calcVisible'></div>
     </div>
   </ion-content>
 </ion-view>
