--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -44,6 +44,7 @@ body {
 
 .bill-container{
   background: $sunglo;
+  border-bottom: 1px solid white;
   padding: 20px 5px 20px 5px;
   width: 100%;
   .cur-bill{
@@ -65,6 +66,7 @@ body {
 
 .tax-container {
   background: $sunglo;
+  border-bottom: 1px solid white;
     padding: 20px 5px 20px 5px;
 
   width: 100%;
@@ -103,13 +105,14 @@ body {
 
 .tip-slider-container {
   background: $picton-blue;
-  padding: 20px 0px 30px 0px;
+  border-bottom: 1px solid white;
+  padding: 20px 0px 40px 0px;
 
   width: 100%;
   .tip-slider {
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
-      border:3px solid white;
+      border: 2px solid white;
       border-radius: 50%;
       background: $sunglo;
       height: 40px;
@@ -117,6 +120,7 @@ body {
       width: 40px;
     }
     &::-webkit-slider-thumb:active {
+      background: white;
       -webkit-transform: scale(1.2);
       transform: scale(1.2);
       z-index: 10000;
@@ -125,7 +129,7 @@ body {
     border-radius: 0;
     background: white;
     display: block;
-    height: 6px;
+    height: 1px;
     -webkit-transform: translate3d(0px,0px,0px);
     width: 100%;
     // -ms-transform: rotate(270deg); /* IE 9 */
@@ -175,7 +179,7 @@ body {
     &:last-child {
       .num-btn {
         border-bottom-width:0px;
-        height: 69px;
+        height: 67px;
       }
     }
     .num-btn {
@@ -207,7 +211,7 @@ body {
       display: inline-block;
       float: left;
       font-size: 1.3em;
-      height: 68px;
+      height: 66px;
       margin:0px;
       outline: none;
       text-align: center;
