more restyling; need to fix slider implementation, perhaps move only to totals page

--- a/haml/templates/test.haml
+++ b/haml/templates/test.haml
@@ -7,3 +7,4 @@
   %p Tip Percent Ints {{ tip.tipPercentInts }}
   %p Tip Percent Fracts {{ tip.tipPercentFracts }}
   %p Tip As Percent {{ tipAsPercent }} %
+  %input.range{ type: "range", min: "0", max: "30", step: "1", "ng-model" => "per" }
