--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -7,4 +7,5 @@
   <p>Tip Percent Ints {{ tip.tipPercentInts }}</p>
   <p>Tip Percent Fracts {{ tip.tipPercentFracts }}</p>
   <p>Tip As Percent {{ tipAsPercent }} %</p>
+  <input class='range' max='30' min='0' ng-model='per' step='1' type='range'>
 </div>
