--- a/www/templates/slider.html
+++ b/www/templates/slider.html
@@ -1,63 +1,67 @@
-<div ng-controller='sliderView' scroll='false'>
-  <ion-slide-box does-continue='true' on-slide-changed='slideHasChanged($index)' show-pager='false'>
-    <ion-slide>
-      <div class='slide-box slide-bill'>
-        <div class='slide-content'>
-          <div class='number'>{{ billAsCurrency | currency }}</div>
-          <div class='label'>Bill</div>
-        </div>
-      </div>
-    </ion-slide>
-    <ion-slide>
-      <div class='slide-box slide-tip'>
-        <div class='slide-content'>
-          <div class='number'>{{ tipAsCurrency | currency }}</div>
-          <div class='percent'>{{ tipAsPercent | number }} %</div>
-          <!-- %input.range.super-scaled-range{ type: "range", min: "0", max: "30", step: "1", "ng-model" => "tip", "ng-change" => "calcTotals()" } -->
-          <div class='label'>Tip</div>
-        </div>
-      </div>
-    </ion-slide>
-    <ion-slide>
-      <div class='slide-box slide-tax'>
-        <div class='slide-content'>
-          <div class='number'>{{ taxAsCurrency | currency }}</div>
-          <div class='percent'>{{ taxAsPercent | number }} %</div>
-          <div class='label'>Tax</div>
-        </div>
-      </div>
-    </ion-slide>
-    <ion-slide>
-      <div class='slide-box slide-total'>
-        <div class='slide-content'>
-          <div class='summary summary-bill'>
-            <div class='summary-content'>Bill: {{ billAsCurrency | currency }}</div>
-          </div>
-          <div class='summary summary-tip'>
-            <div class='summary-content'>Tip: ({{ tipAsPercent | number }} %) {{ tipAsCurrency | currency }}</div>
-          </div>
-          <div class='summary summary-tax'>
-            <div class='summary-content'>Tax: ({{ taxAsPercent | number }} %) {{ taxAsCurrency | currency }}</div>
-          </div>
-          <div class='summary summary-total'>
-            <div class='summary-content'>Total:</div>
+<ion-view title='TipAdvisor'>
+  <ion-content ng-controller='sliderView' scroll='false'>
+    <ion-slide-box does-continue='true' on-slide-changed='slideHasChanged($index)' show-pager='false'>
+      <ion-slide>
+        <div class='slide-box slide-bill'>
+          <div class='slide-content'>
+            <div class='label'>Bill</div>
+            <div class='number'>{{ billAsCurrency | currency }}</div>
           </div>
         </div>
-      </div>
-    </ion-slide>
-  </ion-slide-box>
-  <p>ACTIVE SECTION: {{ activeSection }}</p>
-  <button ng-click='insertTestData()'>INSERT TEST DATA</button>
-  <div calc=''></div>
-  <!-- <ion-slide-box on-slide-changed="slideHasChanged($index)"> -->
-  <!-- <ion-slide> -->
-  <!-- <div class="box blue"><h1>BLUE</h1></div> -->
-  <!-- </ion-slide> -->
-  <!-- <ion-slide> -->
-  <!-- <div class="box yellow"><h1>YELLOW</h1></div> -->
-  <!-- </ion-slide> -->
-  <!-- <ion-slide> -->
-  <!-- <div class="box pink"><h1>PINK</h1></div> -->
-  <!-- </ion-slide> -->
-  <!-- </ion-slide-box> -->
-</div>
+      </ion-slide>
+      <ion-slide prevent-drag=''>
+        <div class='slide-box slide-tip'>
+          <div class='slide-content'>
+            <div class='label'>Tip</div>
+            <div class='number'>{{ tipAsCurrency | currency }}</div>
+            <div class='percent'>{{ tipAsPercent | number }}%</div>
+            <input class='range' id='range-tip' max='30' min='0' ng-model='per.percent' step='1' type='range'>
+          </div>
+        </div>
+      </ion-slide>
+      <ion-slide>
+        <div class='slide-box slide-tax'>
+          <div class='slide-content'>
+            <div class='label'>Tax</div>
+            <div class='number'>{{ taxAsCurrency | currency }}</div>
+            <div class='percent'>{{ taxAsPercent | number }}%</div>
+            <input class='range' id='range-tax' max='30' min='0' ng-model='per.percent' step='1' type='range'>
+          </div>
+        </div>
+      </ion-slide>
+      <ion-slide>
+        <div class='slide-box slide-box-lg slide-total'>
+          <div class='slide-content'>
+            <div class='summary summary-bill'>
+              <div class='summary-content'>Bill: {{ billAsCurrency | currency }}</div>
+            </div>
+            <div class='summary summary-tip'>
+              <div class='summary-content'>Tip: ({{ tipAsPercent | number }}%) {{ tipAsCurrency | currency }}</div>
+            </div>
+            <div class='summary summary-tax'>
+              <div class='summary-content'>Tax: ({{ taxAsPercent | number }}%) {{ taxAsCurrency | currency }}</div>
+            </div>
+            <div class='summary summary-total'>
+              <div class='summary-content'>Total:</div>
+            </div>
+          </div>
+        </div>
+      </ion-slide>
+    </ion-slide-box>
+    <p>ACTIVE SeCTION: {{ activeSection }}</p>
+    <input class='range testrange' max='30' min='0' ng-change='testing()' ng-model='per.percent' step='1' type='range'>
+    <button ng-click='insertTestData()'>INSERT TEST DATA</button>
+    <div calc='' id='calc'></div>
+    <!-- <ion-slide-box on-slide-changed="slideHasChanged($index)"> -->
+    <!-- <ion-slide> -->
+    <!-- <div class="box blue"><h1>BLUE</h1></div> -->
+    <!-- </ion-slide> -->
+    <!-- <ion-slide> -->
+    <!-- <div class="box yellow"><h1>YELLOW</h1></div> -->
+    <!-- </ion-slide> -->
+    <!-- <ion-slide> -->
+    <!-- <div class="box pink"><h1>PINK</h1></div> -->
+    <!-- </ion-slide> -->
+    <!-- </ion-slide-box> -->
+  </ion-content>
+</ion-view>
