basic models factories for bill, tip, tax

--- a/haml/index.haml
+++ b/haml/index.haml
@@ -11,6 +11,8 @@
     %script{ src: 'cordova_plugins.js' }
     %script{ src: 'js/controllers/tipadvisor.controllers.js' }
     %script{ src: 'js/services/tipadvisor.services.js' }
+    %script{ src: 'js/controllers/tipadvisor.newcontrollers.js' }
+    %script{ src: 'js/services/tipadvisor.newfactories.js' }
     %script{ src: 'js/directives/tipadvisor.directives.js' }
     %script{ src: 'js/tipadvisor.js' }
     / <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
