--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -471,6 +471,10 @@ $debian-red: RGBA(212, 14, 82, 1);
     }
   }
 }
+
+.testing {
+  color: black;
+}
 // media queries for iphone
 
 /* iPhone with no retina display */
