--- a/haml/templates/newhome.haml
+++ b/haml/templates/newhome.haml
@@ -1,16 +1,20 @@
 %ion-view{ title: "TipAdvisor"}
-  %ion-content{ "ng-controller" => "homeCtrl", "scroll" => "false" }
+  %ion-content{ "ng-controller" => "homeCtrl" }
     .testing
       %p Dollars are {{ bill.dollars }}
       %p Cents are {{ bill.cents }}
-      %input{ type: "text", "ng-model" => "bill.dollars" }
+      %input{ type: "text", "ng-model" => "bill.dollars", "ng-change" => "recalcTaxCurrency()" }
       %button{ type: "button", "ng-click" => "setBillDollars(10)" } Set bill to $10
 
-      %p Currently, the tip is {{ tip.percent }}
-      %input{ type: "range", min: "0", max: "30", step: "1", "ng-model" => "tip.percent" }
+      %p Currently, the tip is {{ tip.percent * 100 }} %
+      %input{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent" }
 
-      %p The tax is: {{ tax.percent }}
-      %input{ type: "number", "ng-model" => "tax.percent" }
+      %p The tax is: $ {{ tax.currency }}
+      %input{ type: "number", "ng-model" => "tax.currency", "ng-change" => "recalcTaxPercent()" }
+
+      %p Change tax by percent (current percent is {{ tax.percent }})
+      %input{ type: "range", min: "0.00", max: "1", step: "0.01","ng-model" => "tax.percent", "ng-change" => "recalcTaxCurrency()"}
+      %button{ type: "button", "ng-click" => "calcTaxCur()" } Calc Tax from Bill
       / %p Dollars are {{ bill.dollars }}
       / %p Cents are {{ bill.cents }}
       / %input{ type: "text", "ng-model" => "newDollars", placeholder: "New Dollars" }
