--- a/haml/templates/newhome.haml
+++ b/haml/templates/newhome.haml
@@ -1,20 +1,20 @@
 %ion-view{ title: "TipAdvisor"}
   %ion-content{ "ng-controller" => "homeCtrl" }
     .testing
-      %p Dollars are {{ bill.dollars }}
-      %p Cents are {{ bill.cents }}
-      %input{ type: "text", "ng-model" => "bill.dollars", "ng-change" => "recalcTaxCurrency()" }
-      %button{ type: "button", "ng-click" => "setBillDollars(10)" } Set bill to $10
+      %p The bill is {{ bill.currency | currency }}
+      %input{ type: "number", "ng-model" => "bill.currency", "ng-change" => "recalcTaxPercent(); recalcTipPercent()", placeholder: "{{ bill.currency | number : 2}}" }
 
-      %p Currently, the tip is {{ tip.percent * 100 }} %
-      %input{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent" }
-
-      %p The tax is: $ {{ tax.currency }}
+      %p The tip is {{ tip.percent * 100 | number : 2 }} %
+      %input{ type: "number", "ng-model" => "tip.currency", "ng-change" => "recalcTipPercent()" }
+      %p Change tip by percent
+      %input{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent", "ng-change" => "recalcTipCurrency()" }
+      
+      %p The tax is: {{ tax.currency | currency }}
       %input{ type: "number", "ng-model" => "tax.currency", "ng-change" => "recalcTaxPercent()" }
 
-      %p Change tax by percent (current percent is {{ tax.percent }})
+      %p Change tax by percent (current percent is {{ tax.percent * 100 | number : 2 }})
       %input{ type: "range", min: "0.00", max: "1", step: "0.01","ng-model" => "tax.percent", "ng-change" => "recalcTaxCurrency()"}
-      %button{ type: "button", "ng-click" => "calcTaxCur()" } Calc Tax from Bill
+
       / %p Dollars are {{ bill.dollars }}
       / %p Cents are {{ bill.cents }}
       / %input{ type: "text", "ng-model" => "newDollars", placeholder: "New Dollars" }
