--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -475,6 +475,37 @@ $debian-red: RGBA(212, 14, 82, 1);
 .testing {
   color: black;
 }
+
+.four-panel-container {
+  color: black;
+  height: 100%;
+  .bill-panel {
+
+  }
+  .tip-panel {
+
+  }
+  .tax-panel {
+
+  }
+  .total-panel {
+    
+  }
+}
+.scroll {
+  height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
 // media queries for iphone
 
 /* iPhone with no retina display */
